--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -14,4 +14,4 @@ WORKDIR /
 
 COPY --from=build /usr/local/bin/test-enclave .
 
-ENTRYPOINT ["/test-enclave", "server", "5005"]
+ENTRYPOINT ["./test-enclave", "server", "5005"]
