--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,7 +2,7 @@ FROM alpine:latest
 
 WORKDIR /
 
-COPY kmstool_cli_enclave ./
+COPY kmstool_enclave_cli ./
 COPY --from=build /usr/local/bin/test-enclave ./
 
 CMD ["./test-enclave", "server", "5005"]
