--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,7 +2,6 @@ FROM alpine:latest
 
 WORKDIR /
 
-COPY kmstool_enclave_cli ./
-COPY --from=build /usr/local/bin/test-enclave ./
+COPY kmstool_enclave_cli test-enclave ./
 
 CMD ["./test-enclave", "server", "5005"]
