--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -2,6 +2,7 @@ FROM alpine:latest
 
 WORKDIR /
 
-COPY kmstool_enclave_cli test-enclave ./
+COPY kmstool_enclave_cli .
+COPY test-enclave .
 
-CMD ["/test-enclave", "server", "5005"]
+CMD ["./test-enclave", "server", "5005"]
