--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -1,8 +1,9 @@
-FROM alpine:latest
+FROM amazonlinux:2
 
-WORKDIR /
+WORKDIR /app
 
-COPY kmstool_enclave_cli .
-COPY test-enclave .
+COPY ./kmstool_enclave_cli ./
+COPY ./libnsm.so /usr/lib64/
+COPY ./test-enclave ./
 
-CMD ["./test-enclave", "server", "5005"]
+ENTRYPOINT ["./test-enclave", "server", "5005"]
