--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -8,4 +8,4 @@ COPY ./test-enclave ./
 
 ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/"
 
-ENTRYPOINT ["./test-enclave", "server", "5005"]
+ENTRYPOINT ["./test-enclave", "5000"]
