--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,6 +1,7 @@
 FROM amazonlinux:2 as build
 
 RUN yum -y install wget
+RUN amazon-linux-extras install aws-nitro-enclaves-cli
 
 WORKDIR /deps
 
@@ -9,6 +10,7 @@ RUN wget "https://github.com/DIMO-Network/synthetic-wallet-enclave/releases/down
 
 FROM amazonlinux:2 as image
 
+COPY --from=build /usr/bin/nitro-cli /
 COPY --from=build /deps/synthetic-wallet-enclave.eif /
 COPY --from=build /deps/run.sh /
 
