--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -12,6 +12,9 @@ FROM amazonlinux:2 as image
 
 COPY --from=build /usr/bin/nitro-cli /
 COPY --from=build /deps/synthetic-wallet-enclave.eif /
+
+RUN chmod +x /synthetic-wallet-enclave.eif
+
 COPY --from=build /deps/run.sh /
 
 CMD ["/run.sh"]
