--- a/.github/workflows/buildfull.yml
+++ b/.github/workflows/buildfull.yml
@@ -14,6 +14,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: 'aws/aws-nitro-enclaves-sdk-c'
+          
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to DockerHub
         uses: docker/login-action@v2
