--- a/.github/workflows/buildenclave.yml
+++ b/.github/workflows/buildenclave.yml
@@ -1,4 +1,4 @@
-name: build-app-image
+name: build-enclave-image
 on:
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
