--- a/.github/workflows/buildappimage.yml
+++ b/.github/workflows/buildappimage.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           context: .
           file: ./resources/appimage/Dockerfile
-          push: false
+          push: true
           platforms: linux/amd64
           tags: dimozone/synthetic-wallet-enclave-app:${{ steps.slug.outputs.sha7 }}, dimozone/synthetic-wallet-enclave-app:latest
 
