--- a/.github/workflows/buildenclave.yml
+++ b/.github/workflows/buildenclave.yml
@@ -23,7 +23,16 @@ jobs:
       - name: Get short SHA
         id: slug
         run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
-        
+
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./resources/appimage/Dockerfile
+          push: false
+          platforms: linux/amd64
+          tags: dimozone/synthetic-wallet-enclave-app:local
+
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
