--- a/resources/enclaveimage/Dockerfile
+++ b/resources/enclaveimage/Dockerfile
@@ -1,8 +1,8 @@
 FROM amazonlinux:2 as build
 
 RUN yum -y install wget
-RUN amazon-linux-extras install aws-nitro-enclaves-cli docker && \
-    yum install wget git aws-nitro-enclaves-cli-devel -y
+RUN amazon-linux-extras install aws-nitro-enclaves-cli && \
+    yum install wget git aws-nitro-enclaves-cli-devel docker -y
 
 
 WORKDIR /build/
