--- a/.github/workflows/buildnitrotools.yml
+++ b/.github/workflows/buildnitrotools.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_test:
+  build_kms_tools:
     # The type of runner that the job will run on
     name: buildpushdev
     runs-on: self-hosted
@@ -35,12 +35,34 @@ jobs:
           target: builder
           platforms: linux/amd64
           tags: dimozone/aws-nitro-enclaves-sdk-c:latest
+    
+  build_nitro_cli:
+    # The type of runner that the job will run on
+    name: buildpushdev
+    runs-on: self-hosted
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - name: Checkout enclave sdk
+        uses: actions/checkout@v4
+        with:
+          repository: 'aws/aws-nitro-enclaves-sdk-c'
+          path: 'aws-nitro-enclaves-sdk-c'
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push enclave builder
         uses: docker/build-push-action@v3
         with:
           context: .
           file: ./resources/enclavebuilderimage/Dockerfile
-          push: false
+          push: true
           platforms: linux/amd64
           tags: dimozone/nitro-enclave-builder:latest
   
