--- a/.github/workflows/buildnitrotools.yml
+++ b/.github/workflows/buildnitrotools.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build_kms_tools:
     # The type of runner that the job will run on
-    name: buildpushdev
+    name: build kms tools
     runs-on: self-hosted
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -38,15 +38,11 @@ jobs:
     
   build_nitro_cli:
     # The type of runner that the job will run on
-    name: buildpushdev
+    name: build nitro-cli image
     runs-on: self-hosted
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - name: Checkout enclave sdk
-        uses: actions/checkout@v4
-        with:
-          repository: 'aws/aws-nitro-enclaves-sdk-c'
-          path: 'aws-nitro-enclaves-sdk-c'
+      
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
