--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,22 +1,55 @@
-FROM amazonlinux:2 as build
+FROM amazonlinux as full_image
 
-RUN yum -y install wget
-RUN amazon-linux-extras install aws-nitro-enclaves-cli
+# Install packages
+#
+RUN amazon-linux-extras install aws-nitro-enclaves-cli && \
+    yum install aws-nitro-enclaves-cli-devel jq util-linux \
+        unzip curl which file -y
 
-WORKDIR /deps
+# Install awscli v2
+#
+RUN \
+    cd tmp && \
+    curl "https://awscli.amazonaws.com/awscli-exe-linux-$(arch).zip" -o "awscliv2.zip" && \
+    unzip awscliv2.zip && \
+    ./aws/install
 
-COPY resources/docker/run.sh .
-RUN wget "https://github.com/DIMO-Network/synthetic-wallet-enclave/releases/download/v1.7/synthetic-wallet-enclave.eif"
+WORKDIR /ne-deps
 
-FROM amazonlinux:2 as image
+# Copy only the required binaries to /ne-deps folder.
+#
+RUN BINS="\
+    /usr/local/bin/aws \
+    /usr/bin/nitro-cli \
+    /usr/bin/vsock-proxy \
+    /usr/bin/file \
+    /usr/bin/jq \
+    /usr/bin/lscpu \
+    /usr/bin/which \
+    " && \
+    for bin in $BINS; do \
+        { echo "$bin"; ldd "$bin" | grep -Eo "/.*lib.*/[^ ]+"; } | \
+            while read path; do \
+                mkdir -p ".$(dirname $path)"; \
+                cp -fL "$path" ".$path"; \
+            done \
+    done
 
-COPY --from=build /usr/bin/nitro-cli /
-COPY --from=build /deps/synthetic-wallet-enclave.eif /
+# Prepare other required files and folders for the final image.
+#
+RUN \
+    mkdir -p /ne-deps/etc/nitro_enclaves && \
+    mkdir -p /ne-deps/run/nitro_enclaves && \
+    mkdir -p /ne-deps/var/log/nitro_enclaves && \
+    cp -rf /usr/local/ /ne-deps/usr/ && \
+    cp -rf /usr/share/nitro_enclaves/ /ne-deps/usr/share/ && \
+    cp -f /etc/nitro_enclaves/vsock-proxy.yaml /ne-deps/etc/nitro_enclaves
 
-RUN mkdir -p /run/nitro_enclaves
-RUN mkdir -p /var/log/nitro_enclaves
-RUN touch /var/log/nitro_enclaves/nitro_enclaves.log
+FROM amazonlinux:2
+COPY --from=full_image  /usr/bin/vsock-proxy /
+COPY --from=full_image /usr/bin/nitro-cli /
+COPY --from=full_image /ne-deps /
 
-COPY --from=build /deps/run.sh /
-
+COPY run.sh /
+COPY synthetic-wallet-enclave.eif /eif/
 CMD ["/run.sh"]
