Updating builder actions

--- a/.github/workflows/buildenclave.yml
+++ b/.github/workflows/buildenclave.yml
@@ -6,7 +6,7 @@ jobs:
   build-app:
     # The type of runner that the job will run on
     name: build-app
-    runs-on: [self-hosted,enclave]
+    runs-on: [self-hosted]
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
@@ -58,7 +58,7 @@ jobs:
   build-final-image:
     # The type of runner that the job will run on
     name: build-final-image
-    runs-on: [self-hosted,enclave]
+    runs-on: [self-hosted]
     needs: build-enclave
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -69,7 +69,10 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+        
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2   
+ 
       - name: Get short SHA
         id: slug
         run: echo "::set-output name=sha7::$(echo ${GITHUB_SHA} | cut -c1-7)"
