--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -3,8 +3,7 @@ FROM amazonlinux as full_image
 # Install packages
 #
 RUN amazon-linux-extras install aws-nitro-enclaves-cli && \
-    yum install aws-nitro-enclaves-cli-devel jq util-linux \
-        unzip curl which file -y
+    yum install aws-nitro-enclaves-cli-devel jq util-linux unzip curl which file -y
 
 # Install awscli v2
 #
