--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -2,50 +2,11 @@ FROM amazonlinux:2 as full_image
 
 # Install packages
 #
-RUN amazon-linux-extras install aws-nitro-enclaves-cli && \
-    yum install aws-nitro-enclaves-cli-devel jq util-linux unzip curl which file -y
-# Install awscli v2
-#
-WORKDIR /ne-deps
-
-# Copy only the required binaries to /ne-deps folder.
-#
-RUN BINS="\
-    /usr/local/bin/aws \
-    /usr/bin/nitro-cli \
-    /usr/bin/vsock-proxy \
-    /usr/bin/file \
-    /usr/bin/jq \
-    /usr/bin/lscpu \
-    /usr/bin/which \
-    " && \
-    for bin in $BINS; do \
-        { echo "$bin"; ldd "$bin" | grep -Eo "/.*lib.*/[^ ]+"; } | \
-            while read path; do \
-                mkdir -p ".$(dirname $path)"; \
-                cp -fL "$path" ".$path"; \
-            done \
-    done
-
-# Prepare other required files and folders for the final image.
-#
-RUN \
-    mkdir -p /ne-deps/etc/nitro_enclaves && \
-    mkdir -p /ne-deps/run/nitro_enclaves && \
-    mkdir -p /ne-deps/var/log/nitro_enclaves && \
-    cp -rf /usr/local/ /ne-deps/usr/ && \
-    cp -rf /usr/share/nitro_enclaves/ /ne-deps/usr/share/ && \
-    cp -f /etc/nitro_enclaves/vsock-proxy.yaml /ne-deps/etc/nitro_enclaves
-
-
-FROM amazonlinux:2
-
-COPY --from=full_image /ne-deps/etc /etc/
-COPY --from=full_image /ne-deps/lib /lib/
-COPY --from=full_image /ne-deps/lib64 /lib64/
-COPY --from=full_image /ne-deps/usr/bin /usr/bin/
-COPY --from=full_image /ne-deps/usr/lib64 /usr/lib64/
-
+RUN amazon-linux-extras install aws-nitro-enclaves-cli -y && \
+    yum install aws-nitro-enclaves-cli-devel curl jq -y && \
+    yum clean all && \
+    rm -rf /var/cache/yum && \
+    mkdir -p /enclave
 COPY resources/docker/run.sh  /
 COPY resources/docker/synthetic-wallet-enclave.eif /eif/
 
