--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM amazonlinux:2 as full_image
+FROM amazonlinux:2
 
 # Install packages
 #
@@ -6,7 +6,7 @@ RUN amazon-linux-extras install aws-nitro-enclaves-cli -y && \
     yum install aws-nitro-enclaves-cli-devel curl jq -y && \
     yum clean all && \
     rm -rf /var/cache/yum && \
-    mkdir -p /enclave
+
 COPY resources/docker/run.sh  /
 COPY resources/docker/synthetic-wallet-enclave.eif /eif/
 
