--- a/resources/appimage/Dockerfile
+++ b/resources/appimage/Dockerfile
@@ -10,13 +10,13 @@ COPY . .
 
 RUN go build -v -o /usr/bin/synthetic-wallet-enclave
 
-FROM gcr.io/distroless/static-debian11 AS release
+FROM amazonlinux:2 AS release
 
 WORKDIR /
 
 COPY --from=dimozone/aws-nitro-enclaves-sdk-c:latest /usr/lib64/libnsm.so /usr/lib64/libnsm.so
-COPY --from=dimozone/aws-nitro-enclaves-sdk-c:latest /usr/bin/kmstool_enclave_cli /kmstool_enclave_cli
-COPY --from=enclave-app-build /usr/bin/synthetic-wallet-enclave /synthetic-wallet-enclave
+COPY --from=dimozone/aws-nitro-enclaves-sdk-c:latest /usr/bin/kmstool_enclave_cli /
+COPY --from=enclave-app-build /usr/bin/synthetic-wallet-enclave /
 
 ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/lib64/"
 
