--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -5,7 +5,7 @@ FROM amazonlinux:2
 RUN amazon-linux-extras install aws-nitro-enclaves-cli -y && \
     yum install aws-nitro-enclaves-cli-devel curl jq -y && \
     yum clean all && \
-    rm -rf /var/cache/yum && \
+    rm -rf /var/cache/yum
 
 COPY resources/docker/run.sh  /
 COPY resources/docker/synthetic-wallet-enclave.eif /eif/
