--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -3,7 +3,7 @@ FROM amazonlinux:2
 # Install packages
 #
 RUN amazon-linux-extras install aws-nitro-enclaves-cli -y && \
-    yum install aws-nitro-enclaves-cli-devel curl jq -y && \
+    yum install procps-ng jq -y && \
     yum clean all && \
     rm -rf /var/cache/yum
 
